--- a/GUIESamples/App.xaml
+++ b/GUIESamples/App.xaml
@@ -2,7 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:GUIESamples"
-             StartupUri="TestGUITogglePanel.xaml">
+             StartupUri="GUIButtonSample.xaml">
     <Application.Resources>
          
     </Application.Resources>
